--- a/variables.env
+++ b/variables.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://admin:<password>@cluster0.rrzu8.mongodb.net/<dbname>?retryWrites=true&w=majority
+MONGO_URI=mongodb://localhost:27017/gallery-posts
 SECRET=12345
